2017-08-23 Vlad Glagolev <stealth@sourcemage.org>
	* fonts-x11/interface: new spell, the Interface font family

2017-08-21 Ismael Luceno <ismael@sourcemage.org>
	* python-pypi/djangorestframework: new spell, Web APIs for Django,
	  made easy

2017-08-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* python-pypi/diffoscope: new spell, in-depth comparison of files, archives,
	  and directories
		
2017-08-18 Vlad Glagolev <stealth@sourcemage.org>
	* utils/stopwatch: new spell, command line stopwatch

2017-08-16 Ismael Luceno <ismael@sourcemage.org>
	* xorg-app/xcb-util-xrm: new spell, XCB X resource manager library

2017-08-14 Remko van der Vossen <wich@sourcemage.org>
	* find_depends.function: dependency discovery functions

2017-08-14 Treeve Jelbert <treeve@sourcemage.org>
	* kirigami2: move to kde-frameworks
	* kde5-extra/kirigami: deleted

2017-08-13 Ismael Luceno <ismael@sourcemage.org>
	* devel/cc65: new spell, the 6502 C compiler

2017-08-13 Vlad Glagolev <stealth@sourcemage.org>
	* editors/nvi: new spell, Berkeley Vi Editor

2017-08-11 Remko van der Vossen <wich@sourcemage.org>
	* disk/udev: spell deprecated in favour of disk/eudev

2017-08-11 Treeve Jelbert <treeve@sourcemage.org>
	* kde5-apps/latte-dock: added

2017-08-10 Treeve Jelbert <treeve@sourcemage.org>
	* freedesktop.gpg: add 6F349D7C "Tim-Philipp Müller <tim@centricular.com>

2017-08-10 Thomas Orgis <sobukus@sourcemage.org>
	* FUNCTIONS: Extended functionality for triggering dependent spells.
	  There is the cast_depdentents family in addition to check_dependents
	  now (also the more generic act_dependents).

2017-08-08 Treeve Jelbert <treeve@sourcemage.org>
	* libs/libnsl: NIS(YP) and NIS+ in a IPv6 ready version

2017-08-05 Vlad Glagolev <stealth@sourcemage.org>
	* net/nettop: new spell, simple process/network usage report for Linux

2017-07-31 Vlad Glagolev <stealth@sourcemage.org>
	* python-pypi/bjoern: new spell, screamingly fast Python WSGI server
	  written in C
