@@ -1,0 +1,1 @@
+config_query TINYXML_STL "Build with STL support?" "n"
