@@ -1,0 +1,2 @@
+depends cmake &&
+depends -sub CXX gcc 
