@@ -1,0 +1,16 @@
+           SPELL=tinyxml1
+         VERSION=2.6.2
+          SOURCE="tinyxml_${VERSION//./_}.tar.gz"
+   SOURCE_URL[0]=http://downloads.sourceforge.net/sourceforge/project/tinyxml/tinyxml/${VERSION}/${SOURCE}
+     SOURCE_HASH=sha512:133b5db06131a90ad0c2b39b0063f1c8e65e67288a7e5d67e1f7d9ba32af10dc5dfa0462f9723985ee27debe8f09a10a25d4b5a5aaff2ede979b1cebe8e59d56
+SOURCE_DIRECTORY="${BUILD_DIRECTORY}/tinyxml"
+        WEB_SITE="http://sourceforge.net/projects/tinyxml/"
+      LICENSE[0]=ZLIB
+         ENTERED=20170823
+           SHORT="a simple, small, minimal, C++ XML parser"
+cat << EOF
+TinyXML is a simple, small, minimal, C++ XML parser that can be easily
+integrating into other programs. It reads XML and creates C++ objects
+representing the XML document. The objects can be manipulated, changed,
+and saved again as XML.
+EOF
