@@ -1,0 +1,6 @@
+default_pre_build                                &&
+cd ${SOURCE_DIRECTORY}                           &&
+cp ${SCRIPT_DIRECTORY}/CMakeLists.txt .          &&
+if [[ "${TINYXML_STL}" == "y" ]]; then
+  sed -i '1i#define TIXML_USE_STL=YES' tinyxml.h
+fi
