@@ -1,0 +1,5 @@
+case $THIS_SUB_DEPENDS in
+  STL) [[ TINYXML_STL == "y" ]] ;;
+       *) message "${PROBLEM_COLOR}bogus sub_depends: $SPELL $THIS_SUB_DEPENDS${DEFAULT_COLOR}"
+          return 1;;
+esac
