@@ -1,0 +1,5 @@
+case $THIS_SUB_DEPENDS in
+  STL) config_query TINYXML_STL "Build with STL support?" "y" ;;
+       *) message "${PROBLEM_COLOR}bogus sub_depends: $SPELL $THIS_SUB_DEPENDS${DEFAULT_COLOR}"
+          return 1;;
+esac
