@@ -1,0 +1,3 @@
+2017-08-23 Pavel Vinogradov <public@sourcemage.org>
+	* BUILD, CMakeLists.txt, CONFIGURE, DEPENDS, DETAILS, PRE_BUILD,
+	  PRE_SUB_DEPENDS, SUB_DEPENDS: recreated spell from old tinyxml 2.6.2
