@@ -1,3 +1,6 @@
+2017-08-23 Pavel Vinogradov <public@sourcemage.org>
+	* libs/tinyxml1: added old version of tinyxml
+
 2017-08-23 Vlad Glagolev <stealth@sourcemage.org>
 	* fonts-x11/interface: new spell, the Interface font family
 
